# b2b-client-prospecting

./: .gitignore  README.md  pyproject.toml  ruff.toml
app/: ABOUT.md  app.py
app/.streamlit/: config.toml
app/sites/: home.py  prompt_engineering.py
app/src/: layout.py  params.py
assets/: business_info.md  template.html
client_prospecting/: __init__.py  email.py  params.py  prompts.py  prospecting.py  utils.py
